[gd_scene load_steps=10 format=3 uid="uid://bs1qqace6unyv"]

[ext_resource type="Script" uid="uid://c3xhojfowyfmt" path="res://asset/interactable/shop_ui.gd" id="1_setlf"]
[ext_resource type="StyleBox" uid="uid://dqwppf4fo4rw7" path="res://asset/store/shop_ui.tres" id="2_setlf"]
[ext_resource type="StyleBox" uid="uid://d3q1m7233xara" path="res://asset/store/X.tres" id="3_a432g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h77yj"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_setlf"]
bg_color = Color(0.87329835, 0.87329847, 0.87329817, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a432g"]
content_margin_left = 30.0
content_margin_right = 30.0
bg_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
border_width_right = 1
border_color = Color(0.7792914, 0.7792914, 0.7792913, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvl0y"]
content_margin_left = 30.0
content_margin_right = 30.0
bg_color = Color(0.7877592, 0.78775924, 0.787759, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aabr1"]
content_margin_left = 30.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.37036464, 0.37036443, 0.37036446, 1)
border_width_left = 15
border_width_right = 15
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30bwq"]
bg_color = Color(0.9049494, 0, 0.034373827, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_setlf")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_selected_color = Color(0.34781668, 0.34781697, 0.3478177, 1)
theme_override_colors/font_hovered_color = Color(0.34901962, 0.34901962, 0.34901962, 1)
theme_override_colors/font_unselected_color = Color(0.34901962, 0.34901962, 0.34901962, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/panel = SubResource("StyleBoxFlat_h77yj")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_setlf")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_a432g")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_rvl0y")
theme_override_styles/tab_selected = ExtResource("2_setlf")
current_tab = 1

[node name="Item Shop" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Item Shop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TabContainer/Item Shop/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.2159017, 0.21590173, 0.2159017, 0)
theme_override_constants/shadow_offset_x = 191
theme_override_constants/shadow_offset_y = 341
theme_override_constants/shadow_outline_size = 706
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_aabr1")
text = "itemshop.xyz"

[node name="MoneyLabel" type="Label" parent="TabContainer/Item Shop/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ItemsGrid" type="GridContainer" parent="TabContainer/Item Shop/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 9

[node name="BuyButton" type="Button" parent="TabContainer/Item Shop/VBoxContainer"]
layout_mode = 2
icon_alignment = 1

[node name="Furniture" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Furniture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TabContainer/Furniture/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.2159017, 0.21590173, 0.2159017, 0)
theme_override_constants/shadow_offset_x = 191
theme_override_constants/shadow_offset_y = 341
theme_override_constants/shadow_outline_size = 706
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_aabr1")
text = "furniture.xyz"

[node name="MoneyLabel2" type="Label" parent="TabContainer/Furniture/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ItemsGrid2" type="GridContainer" parent="TabContainer/Furniture/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 9

[node name="BuyButton2" type="Button" parent="TabContainer/Furniture/VBoxContainer"]
layout_mode = 2
icon_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1111.0
offset_top = 1.0
offset_right = 1145.0
offset_bottom = 29.0

[node name="ExitButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("3_a432g")
theme_override_styles/pressed = ExtResource("3_a432g")
theme_override_styles/hover = SubResource("StyleBoxFlat_30bwq")
text = "  X  "
icon_alignment = 1
